fixed country ui overflow

--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -41,3 +41,7 @@ button {
     text-wrap: balance;
   }
 }
+
+input {
+  outline: none;
+}
